@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST marrie-0.3.tar.gz 7565 SHA256 ec83a3ee9ececd94f4751d73f48b65241f290a1c0b665512c572542f9a0f6383 SHA512 3e90158b567c728a434dcd4965f7928dd704c8caca7e80b3f654b1156266e7af817a5aa9e10f01ab247acf505828b43a033cd84c698a817b9f203528b6f3037e WHIRLPOOL 8a7aed287a779c010de42e413b3de97c51be95dbe659fb9a2892eb858c944f4603885eaca6e38e4274da6e90e144cbd54da7c5e790c8e01120a8bf61cfec575c
-EBUILD marrie-0.3-r2.ebuild 1339 SHA256 549d680da2638b0b0ccf18c45a5354a744f288e4df39efee06af76e4e39726bb SHA512 d3c300b6eb79d25a54d79ada5b22d8fab429f33c429a95d463b6fd2a87163612e0d388e3dbf337360771e2d5a0ceed142c1abf9258e0d3b84628e2b6ac1dd540 WHIRLPOOL 97b6d71cad382ff213a63d5f0bfb92470c3e845ae7b3f9ffae390064ae4fb4e43338e4e0767a83eb560929573d11f14c2a924fd1bd4f5ed8b38fc40d4d9aeec2
-EBUILD marrie-9999.ebuild 1337 SHA256 3e026b91c9365f4a6d6c2dd14f4f67b8bf85961bc43eb1acbcfe2b5064bee536 SHA512 00ee293abc77d7ea696cf375b914e3cce5d7faa709340b23c500812ad5ea06e07cf2aae6f9670f082b1334121d176fc86cba2a30d10f9856e728d125fac06fd0 WHIRLPOOL 8cc755534a1f9a9d35bc0314ce2376dd2b14bd77d0aab909492e0ee839f772d022337c20fe1925609e6ef59555d67e498f0e4c5cea909185b764eac8a824ca10
-MISC ChangeLog 955 SHA256 f488572886e293b992f11694fb5afe053494b9dc38a9e1a5fa4a23f88633b2b5 SHA512 fd2eaa586c614039987fa9e642a6b537057c0a6b14eea56f04b18fb1151d13ce479c3ee63da2b48862a641ecbd65b0e7438c78bb96da2069da6b539bebddb755 WHIRLPOOL 28794e3e27211842cce3149554b26e4b44afa8c5a69721f15355761c58be22044c386af934edeccde6bc444d7466fd86fe95543277179a58fb3cdb01707d7ceb
+EBUILD marrie-0.3-r2.ebuild 1308 SHA256 20f47fd2c32ab3b42fdf184d462394634eb895ca757db78ce776ccdcf5a05ae5 SHA512 3d89093fa9142168fb0280ea97abac1233abd3584e2ca945359d131a378871d3aeacb667f7c7572c9354e4ff61686956eed24969fb378faffc0e7ac2d22fcc2e WHIRLPOOL 5ea82999d1e5531d7bb73d10b41aea5adef057158c298def76a15fbc2f7bdc296813c9481b30f47d31ee27418ebf2e8de16e8b3140d013fa0690de64c9a97052
+EBUILD marrie-9999.ebuild 1306 SHA256 8f5b083534decd410c04959fea8263b762f8fddaadcdc2208542f2986081e6b0 SHA512 437a4ec663332047114362d09418f6e7911072ee899550f3b24d5a65c5f94b3d854822a7c3a530c2e4285aa5f44cf122f2d7324624c23d2ced89b110c042b97a WHIRLPOOL 09f45dd01e8ee8e1d37433d8ec5064f0339842db595e0c9b47d681a8a091340f5362b530cd6114647a06ca2fece459eea72de15feb0b36c802d3e110605198ec
+MISC ChangeLog 1082 SHA256 34a2cf72417ab6060bfb7f48ab8c95b91b8b164b5e861347573ad901e6731d9c SHA512 5f627efcf80ee212386a8106dab7ba3c2fb547786809a86e79d086d737cfdf10c7d8058acf684ae2f4a374dd8b6c90d3cc43f2a09099833b754282203217d0c9 WHIRLPOOL a3bd29423cd8de0816dc35ac45f069c0916372b5855bce72b096e697d7958dcea727862b1c6430ffecf72393fdfa30feecd2081f15e34a872ddfb1d3fa95a733
 MISC metadata.xml 495 SHA256 987375eceb3e50b6f07cd64365425fba4f77ced4dae4f24e946bc13a5ca5e48f SHA512 5892338666d768f881d7c48f6be08cb7be72e6470b2fddded9237ce6c261337b7f5f396986be36399f3bdd6dde278cbb3c7a8fdf5aa661a95bec31ee97171ead WHIRLPOOL 1dc743e37de363f887c09e81f95b38afb0c64feffd2234359a968675dc7ca489853d52e2576009d3abd778b2601b94347a6a1a8b6ad8956361db88b621cd6291
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQ24ZDAAoJEOeBhlrCAAWGj0kIAJT+3Jq7GitR0uA7n7rQaZRr
+3XZbrlJTFUnBeSMXFcuokTizEL4pM7agnPdVB1zayDPav3PJz6D1CW5j/OmgV/xl
+9wx5dX+5ZyUvBD3Nge162ix88yzJcnpLLDFHE7vlCXJwEW2bT3HUB9mr9Fr3zJwm
+WKbgJ0UbuoaX3YymdkIKFrovcm7qaGOH3RXXu3ejdeyp4R/BarV2aAqrgcbDx2LS
+dD1JVwqMYMgtusvTd28zAi9RpPvvAzKu8W2lu6ocs3ZodqwdBGofiJjysrvxkAid
+zt6NgQF6mS08NuiMhS2x2jxRAZrEbte5Xas6+5RqDouFIhUNoIM9sb8rvRe6pr8=
+=621D
+-----END PGP SIGNATURE-----
