@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/marrie/marrie-9999.ebuild,v 1.3 2012/11/23 06:28:52 rafaelmartins Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/marrie/marrie-9999.ebuild,v 1.4 2012/12/26 23:20:34 ottxor Exp $
 
 EAPI=4
 
@@ -12,7 +12,6 @@ HG_ECLASS=""
 if [[ ${PV} = *9999* ]]; then
 	HG_ECLASS="mercurial"
 	EHG_REPO_URI="http://hg.rafaelmartins.eng.br/marrie/"
-	EHG_REVISION="default"
 fi
 
 inherit distutils ${HG_ECLASS}
